Functions, taxonomies & post types updated

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "wordpress-gulp-starter",
   "version": "0.0.0",
   "homepage": "http://squie.com",
-  "description": "Wordpress gulp starter",
+  "description": "Inchbald",
   "main": "",
   "moduleType": [],
   "authors": [
