--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "skrollr": "./bower_components/skrollr/src/skrollr.js",
     "svg-segment": "./bower_components/segment/dist/segment.min.js",
     "ease": "./bower_components/segment/js/ease.min.js",
-    "echo": "./bower_components/echojs/dist/echo.min.js"
+    "echo": "./bower_components/echojs/dist/echo.min.js",
+    "slickJS": "./bower_components/slick-carousel/slick/slick.js"
   },
   "browserify-shim": {
     "skrollr": {
@@ -15,6 +16,9 @@
     },
     "svg-segment": {
       "exports": "svg-segment"
+    },
+    "slickJS": {
+        "exports": "slickJS"
     },
     "ease": {
       "exports": "ease"
