--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "slick-carousel": "^1.7.1",
-    "remodal": "^1.1.1"
+    "remodal": "^1.1.1",
+    "dynamics.js": "^1.1.1"
   }
 }
