--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "ease": "./bower_components/segment/js/ease.min.js",
         "echo": "./bower_components/echojs/dist/echo.min.js",
         "slickJS": "./bower_components/slick-carousel/slick/slick.js",
+        "isotope": "./bower_components/isotope/js/isotope.js",
         "remodal": "./bower_components/remodal/dist/remodal.js",
         "dynamics": "./bower_components/dynamics.js/lib/dynamics.js",
         "froogaloop": "./bower_components/froogaloop2/froogaloop.js"
@@ -22,6 +23,9 @@
         },
         "slickJS": {
             "exports": "slickJS"
+        },
+        "isotope": {
+            "exports": "isotope"
         },
         "froogaloop": {
             "exports": "froogaloop"
