--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "echo": "./bower_components/echojs/dist/echo.min.js",
         "slickJS": "./bower_components/slick-carousel/slick/slick.js",
         "isotope": "./bower_components/isotope/dist/isotope.pkgd.js",
+        "bbq": "./bower_components/jquery.bbq/jquery.ba-bbq.js",
         "remodal": "./bower_components/remodal/dist/remodal.js",
         "dynamics": "./bower_components/dynamics.js/lib/dynamics.js",
         "froogaloop": "./bower_components/froogaloop2/froogaloop.js"
@@ -26,6 +27,9 @@
         },
         "isotope": {
             "exports": "isotope"
+        },
+        "bbq": {
+            "exports": "bbq"
         },
         "froogaloop": {
             "exports": "froogaloop"
